--- a/006_阴影实现多页效果.html
+++ b/006_阴影实现多页效果.html
@@ -6,6 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        * {
+            margin: 0;
+            padding: 0;
+            font-family: consolas;
+        }
+
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            background: #181818;
+        }
+
         /* https://developer.mozilla.org/zh-CN/docs/Web/CSS/box-shadow */
         /* x偏移量 | y偏移量 | 阴影颜色 */
         /* box-shadow: 60px -16px teal; */
