--- a/index.html
+++ b/index.html
@@ -1,12 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CSS_Study</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        div.side-nav {
+            position: sticky;
+            height: calc(100vh - 10rem);
+            overflow-y: auto;
+        }
+
+        div.side-nav::-webkit-scrollbar {
+            width: 10px;
+            height: 30px;
+        }
+
+        div.side-nav::-webkit-scrollbar-thumb {
+            background: -webkit-gradient(linear, left top, left bottom, from(#ff8a00), to(#e52e71));
+            background: linear-gradient(180deg, #ff8a00, #e52e71);
+            border-radius: 30px;
+            box-shadow: inset 2px 2px 2px hsla(0, 0%, 100%, .25), inset -2px -2px 2px rgba(0, 0, 0, .25);
+        }
+
+        div.side-nav::-webkit-scrollbar-track {
+            background: linear-gradient(90deg, #201c29, #201c29 1px, #100e17 0, #100e17);
+        }
+    </style>
 </head>
+
 <body>
-    <a href="http://www.baidu.com/">百度</a>
+    <div class="container-fluid  bg-dark pt-2">
+        <div class="row g-2">
+            <div class="col-2 side-nav">
+                <ul class="nav flex-column nav-pills">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/HTML+CSS/001_渐变发光卡片/index.html"
+                            target="view_frame">渐变发光卡片</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/HTML+CSS/002_导航下划线跟随效果.html" target="view_frame">导航下划线跟随效果</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/HTML+CSS/003_滑动菜单指示器.html" target="view_frame">滑动菜单指示器</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/HTML+CSS/004_滑动菜单指示器优化.html" target="view_frame">滑动菜单指示器优化</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/HTML+CSS/005_饿了吗官网百叶屏效果.html" target="view_frame">饿了吗官网百叶屏效果</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/HTML+CSS/006_阴影实现多页效果.html" target="view_frame">阴影实现多页效果</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-10">
+                <div class="ratio ratio-16x9  bg-dark">
+                    <iframe class="embed-responsive-item" src="/HTML+CSS/001_渐变发光卡片/index.html"
+                        name="view_frame"></iframe>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        const $nav = $('ul.nav li a');
+        $nav.on('click', function () {
+            $(this).parent().siblings().children().removeClass('active');
+            $(this).addClass('active');
+        })
+    </script>
 </body>
+
 </html>
