--- a/003_滑动菜单指示器.html
+++ b/003_滑动菜单指示器.html
@@ -18,7 +18,7 @@
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            background: #080b1f;
+            background: #181818;
         }
 
         ul {
@@ -27,7 +27,6 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            border: 1px solid red;
         }
 
         ul li {
@@ -35,6 +34,7 @@
             padding: 10px 20px;
             margin: 10px 0;
             cursor: pointer;
+            font-size: 20px;
             color: #fff;
         }
 
@@ -69,7 +69,7 @@
             remark.style.height = e.offsetHeight + 'px'
         }
 
-        liList.forEach(item => item.addEventListener('mousemove', _.debounce(e => indicator(e.target),30)))
+        liList.forEach(item => item.addEventListener('mousemove', _.debounce(e => indicator(e.target), 30)))
     </script>
 </body>
 
