fix：路径地址修改

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         div.side-nav {
+            --bs-aspect-ratio: calc(9 / 16 * 100%);
             position: sticky;
-            height: calc(100vh - 10rem);
             overflow-y: auto;
         }
 
@@ -38,30 +38,29 @@
             <div class="col-2 side-nav">
                 <ul class="nav flex-column nav-pills">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/HTML+CSS/001_渐变发光卡片/index.html"
+                        <a class="nav-link active" aria-current="page" href="./001_渐变发光卡片/index.html"
                             target="view_frame">渐变发光卡片</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/HTML+CSS/002_导航下划线跟随效果.html" target="view_frame">导航下划线跟随效果</a>
+                        <a class="nav-link" href="./002_导航下划线跟随效果.html" target="view_frame">导航下划线跟随效果</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/HTML+CSS/003_滑动菜单指示器.html" target="view_frame">滑动菜单指示器</a>
+                        <a class="nav-link" href="./003_滑动菜单指示器.html" target="view_frame">滑动菜单指示器</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/HTML+CSS/004_滑动菜单指示器优化.html" target="view_frame">滑动菜单指示器优化</a>
+                        <a class="nav-link" href="./004_滑动菜单指示器优化.html" target="view_frame">滑动菜单指示器优化</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/HTML+CSS/005_饿了吗官网百叶屏效果.html" target="view_frame">饿了吗官网百叶屏效果</a>
+                        <a class="nav-link" href="./005_饿了吗官网百叶屏效果.html" target="view_frame">饿了吗官网百叶屏效果</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/HTML+CSS/006_阴影实现多页效果.html" target="view_frame">阴影实现多页效果</a>
+                        <a class="nav-link" href="./006_阴影实现多页效果.html" target="view_frame">阴影实现多页效果</a>
                     </li>
                 </ul>
             </div>
             <div class="col-10">
                 <div class="ratio ratio-16x9  bg-dark">
-                    <iframe class="embed-responsive-item" src="/HTML+CSS/001_渐变发光卡片/index.html"
-                        name="view_frame"></iframe>
+                    <iframe class="embed-responsive-item" src="./001_渐变发光卡片/index.html" name="view_frame"></iframe>
                 </div>
             </div>
         </div>
