--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </ul>
             </div>
             <div class="col-10">
-                <div class="ratio ratio-16x9  bg-dark">
+                <div class="ratio ratio-16x9 bg-dark">
                     <iframe class="embed-responsive-item" src="./001_渐变发光卡片/index.html" name="view_frame"></iframe>
                 </div>
             </div>
@@ -74,6 +74,12 @@
             $(this).parent().siblings().children().removeClass('active');
             $(this).addClass('active');
         })
+        // 禁止iframe产生历史记录
+        var iframe = document.createElement("iframe");
+        iframe.setAttribute("class", "embed-responsive-item");
+        iframe.setAttribute("name", "view_frame");
+        iframe.setAttribute("src", $('iframe').attr("src"));
+        $('iframe').replaceWith(iframe);
     </script>
 </body>
 
