update:图片懒加载

--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
                     <li class="nav-item">
                         <a class="nav-link" href="./006_阴影实现多页效果.html" target="view_frame">阴影实现多页效果</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./007_瀑布流/index.html" target="view_frame">瀑布流</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./008_图片懒加载/index.html" target="view_frame">图片懒加载</a>
+                    </li>
                 </ul>
             </div>
             <div class="col-10">
